ingress/k8s_dashboard_ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: k8s-dashboard-ingress
  namespace: k8s-dashboard
spec:
  rules:
  - host: k8s.dashboard.com
    http:
      paths:
      - backend:
        serviceName: kubernetes-dashboard
        servicePort: 80
